--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    implementation 'com.jaredrummler:cyanea:1.0.1'
 }
