--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
 
     implementation 'com.jaredrummler:colorpicker:1.1.0'
-    implementation project(':cyaneaJorkoh')
+    implementation project(':cyanea-jorkoh')
 }
