--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven { url "http://jitpack.io/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -19,7 +17,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven { url "http://jitpack.io/" }
     }
 }
 
