--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,8 @@ android {
 
 dependencies {
     def room_version = "2.1.0-alpha04"
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -38,25 +36,20 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-coroutines:$room_version"
-
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
-
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
-
     implementation 'com.jaredrummler:colorpicker:1.1.0'
     implementation project(':cyanea-jorkoh')
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    implementation 'com.github.quickpermissions:quickpermissions-kotlin:0.4.0'
+    implementation project(':quickpermissions-kotlin')
 }
