--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     // ---- DEPENDENCIES ----
     // @formatter:off
@@ -24,7 +22,8 @@ buildscript {
             'androidx': [
                     'appCompat'         : "androidx.appcompat:appcompat:${versions.androidx}",
                     'constraintLayout'  : "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
-                    'preferences'       : "androidx.preference:preference:${versions.androidx}"
+                    'preferences'       : "androidx.preference:preference:${versions.androidx}",
+                    'recyclerView'      : "androidx.recyclerview:recyclerview:${versions.androidx}"
             ],
             'kotlin': [
                     'stdlib': [
@@ -56,6 +55,16 @@ allprojects {
         google()
         jcenter()
         maven { url "http://jitpack.io/" }
+    }
+}
+
+configurations.all {
+    resolutionStrategy {
+        eachDependency { details ->
+            if (details.requested.group == 'org.jetbrains.kotlin') {
+                details.useVersion versions.kotlin
+            }
+        }
     }
 }
 
