--- a/build.gradle
+++ b/build.gradle
@@ -2,40 +2,46 @@ buildscript {
     // ---- DEPENDENCIES ----
     // @formatter:off
     ext.buildConfig = [
-            compileSdk              : 28,
-            targetSdk               : 28,
-            minSdk                  : 21,
-            gradlePlugin            : '3.3.1'
+            compileSdk  : 28,
+            targetSdk   : 28,
+            minSdk      : 21,
+            gradlePlugin: '3.3.1'
     ]
 
     ext.versions = [
-            kotlin                  : '1.3.21',
-            androidx                : '1.1.0-alpha02',
-            constraintlayout        : '1.1.3',
-            colorpicker             : '1.0.5',
-            junit                   : '4.12',
-            mockito_kotlin          : '2.0.0',
-            mockito_core            : '2.23.4'
+            kotlin          : '1.3.21',
+            androidx        : '1.1.0-alpha02',
+            constraintlayout: '1.1.3',
+            colorpicker     : '1.0.5',
+            junit           : '4.12',
+            mockito_kotlin  : '2.0.0',
+            mockito_core    : '2.23.4',
+            room            : '2.1.0-alpha04'
     ]
 
     ext.deps = [
-            'androidx': [
-                    'appCompat'         : "androidx.appcompat:appcompat:${versions.androidx}",
-                    'constraintLayout'  : "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
-                    'preferences'       : "androidx.preference:preference:${versions.androidx}",
-                    'recyclerView'      : "androidx.recyclerview:recyclerview:${versions.androidx}"
-            ],
-            'kotlin': [
-                    'stdlib': [
-                            'jdk'           : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+            'androidx'   : [
+                    'appCompat'       : "androidx.appcompat:appcompat:${versions.androidx}",
+                    'constraintLayout': "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
+                    'preferences'     : "androidx.preference:preference:${versions.androidx}",
+                    'recyclerView'    : "androidx.recyclerview:recyclerview:${versions.androidx}",
+                    'room'            : [
+                            'runtime'   : "androidx.room:room-runtime:${versions.room}",
+                            'compiler'  : "androidx.room:room-compiler:${versions.room}",
+                            'coroutines': "androidx.room:room-coroutines:${versions.room}"
                     ]
             ],
-            'material'              : "com.google.android.material:material:${versions.androidx}",
-            'colorpicker'           : "com.jaredrummler:colorpicker-compat:${versions.colorpicker}",
-            'junit'                 : "junit:junit:${versions.junit}",
-            'mockito': [
-                    'core'              : "org.mockito:mockito-core:${versions.mockito_core}",
-                    'kotlin'            : "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+            'kotlin'     : [
+                    'stdlib': [
+                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+                    ]
+            ],
+            'material'   : "com.google.android.material:material:${versions.androidx}",
+            'colorpicker': "com.jaredrummler:colorpicker-compat:${versions.colorpicker}",
+            'junit'      : "junit:junit:${versions.junit}",
+            'mockito'    : [
+                    'core'  : "org.mockito:mockito-core:${versions.mockito_core}",
+                    'kotlin': "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
             ]
     ]
 
