--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,8 @@ buildscript {
             mockito_kotlin  : '2.0.0',
             mockito_core    : '2.23.4',
             room            : '2.1.0-alpha04',
-            workmanager     : '1.0.0'
+            workmanager     : '1.0.0',
+            parse           : '1.19.0'
     ]
 
     ext.deps = [
@@ -44,7 +45,8 @@ buildscript {
                     'core'  : "org.mockito:mockito-core:${versions.mockito_core}",
                     'kotlin': "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
             ],
-            'workmanager': "android.arch.work:work-runtime-ktx:${versions.workmanager}"
+            'workmanager': "android.arch.work:work-runtime-ktx:${versions.workmanager}",
+            'parse': "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}"
     ]
 
     repositories {
