--- a/cyanea/build.gradle
+++ b/cyanea/build.gradle
@@ -9,6 +9,11 @@ android {
         targetSdkVersion buildConfig.targetSdk
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     sourceSets {
         main.res.srcDirs 'res', 'res-public'
     }
