--- a/color-picker/build.gradle
+++ b/color-picker/build.gradle
@@ -1,18 +1,25 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion buildConfig.compileSdk
-  resourcePrefix "cpv_"
-  defaultConfig {
-    minSdkVersion buildConfig.minSdk
-    targetSdkVersion buildConfig.targetSdk
-  }
-  lintOptions {
-    abortOnError false
-  }
+    compileSdkVersion buildConfig.compileSdk
+    resourcePrefix "cpv_"
+    defaultConfig {
+        minSdkVersion buildConfig.minSdk
+        targetSdkVersion buildConfig.targetSdk
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
-  implementation deps.androidx.appCompat
-  implementation deps.androidx.preferences
+    implementation deps.androidx.appCompat
+    implementation deps.androidx.preferences
 }
