--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
             mockito_core    : '2.23.4',
             room            : '2.1.0-alpha04',
             workmanager     : '1.0.0',
-            parse           : '1.19.0'
+            parse           : '1.19.0',
+            lottie          : '3.0.0'
     ]
 
     ext.deps = [
@@ -44,7 +45,8 @@ buildscript {
                     'kotlin': "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
             ],
             'workmanager': "android.arch.work:work-runtime-ktx:${versions.workmanager}",
-            'parse': "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}"
+            'parse': "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}",
+            'lottie': "com.airbnb.android:lottie:${versions.lottie}"
     ]
 
     repositories {
