--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,30 +30,43 @@ dependencies {
     implementation deps.kotlin.stdlib.jdk
     implementation deps.androidx.appCompat
 
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     implementation deps.material
     implementation deps.androidx.recyclerView
 
+    //Room
     implementation deps.androidx.room.runtime
     annotationProcessor deps.androidx.room.compiler
     kapt deps.androidx.room.compiler
     implementation deps.androidx.room.coroutines
 
+    //Navigation
+    implementation deps.androidx.navigation.runtime
+    implementation deps.androidx.navigation.fragment
+    implementation deps.androidx.navigation.ui
+
+    //WorkManager
     implementation deps.workmanager
 
+    //Google Maps
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
+    //Parse
     implementation deps.parse
 
+    //Lottie
     implementation deps.lottie
 
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.squareup.moshi:moshi-adapters:1.8.0'
+
+    //Koin
     implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0"
