--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
     ext.versions = [
             kotlin          : '1.3.21',
             androidx        : '1.1.0-alpha02',
+            maps            : '16.1.0',
+            location        : '16.0.0',
             constraintlayout: '1.1.3',
             colorpicker     : '1.0.5',
             junit           : '4.12',
@@ -22,37 +24,41 @@ buildscript {
     ]
 
     ext.deps = [
-            'androidx'   : [
-                    'appCompat'         : "androidx.appcompat:appcompat:${versions.androidx}",
-                    'constraintLayout'  : "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
-                    'preferences'       : "androidx.preference:preference:${versions.androidx}",
-                    'recyclerView'      : "androidx.recyclerview:recyclerview:${versions.androidx}",
-                    'room'              : [
-                            'runtime'       : "androidx.room:room-runtime:${versions.room}",
-                            'compiler'      : "androidx.room:room-compiler:${versions.room}",
-                            'coroutines'    : "androidx.room:room-coroutines:${versions.room}"
+            'androidx'    : [
+                    'appCompat'       : "androidx.appcompat:appcompat:${versions.androidx}",
+                    'constraintLayout': "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
+                    'preferences'     : "androidx.preference:preference:${versions.androidx}",
+                    'recyclerView'    : "androidx.recyclerview:recyclerview:${versions.androidx}",
+                    'room'            : [
+                            'runtime'   : "androidx.room:room-runtime:${versions.room}",
+                            'compiler'  : "androidx.room:room-compiler:${versions.room}",
+                            'coroutines': "androidx.room:room-coroutines:${versions.room}"
                     ],
-                    'navigation'        : [
-                            'runtime'       : "androidx.navigation:navigation-runtime-ktx:${versions.navigation}",
-                            'fragment'      : "androidx.navigation:navigation-fragment-ktx:${versions.navigation}",
-                            'ui'            : "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
+                    'navigation'      : [
+                            'runtime' : "androidx.navigation:navigation-runtime-ktx:${versions.navigation}",
+                            'fragment': "androidx.navigation:navigation-fragment-ktx:${versions.navigation}",
+                            'ui'      : "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
                     ]
             ],
-            'kotlin'     : [
+            'kotlin'      : [
                     'stdlib': [
                             'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
                     ]
             ],
-            'material'      : "com.google.android.material:material:${versions.androidx}",
-            'colorpicker'   : "com.jaredrummler:colorpicker-compat:${versions.colorpicker}",
-            'junit'         : "junit:junit:${versions.junit}",
-            'mockito'       : [
-                    'core'      : "org.mockito:mockito-core:${versions.mockito_core}",
-                    'kotlin'    : "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+            'playServices': [
+                    'maps'    : "com.google.android.gms:play-services-maps:${versions.maps}",
+                    'location': "com.google.android.gms:play-services-location:${versions.location}"
             ],
-            'workmanager'   : "android.arch.work:work-runtime-ktx:${versions.workmanager}",
-            'parse'         : "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}",
-            'lottie'        : "com.airbnb.android:lottie:${versions.lottie}"
+            'material'    : "com.google.android.material:material:${versions.androidx}",
+            'colorpicker' : "com.jaredrummler:colorpicker-compat:${versions.colorpicker}",
+            'junit'       : "junit:junit:${versions.junit}",
+            'mockito'     : [
+                    'core'  : "org.mockito:mockito-core:${versions.mockito_core}",
+                    'kotlin': "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+            ],
+            'workmanager' : "android.arch.work:work-runtime-ktx:${versions.workmanager}",
+            'parse'       : "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}",
+            'lottie'      : "com.airbnb.android:lottie:${versions.lottie}"
     ]
 
     repositories {
