Working on favorite customization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
 
     implementation project(':quickpermissions-kotlin')
     implementation project(':cyanea')
+    implementation project(':color-picker')
 }
