--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     //Google Play Services
     implementation deps.playServices.maps
     implementation deps.playServices.location
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 
     //Parse
     implementation deps.parse
