--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.aar'], dir: 'libs')
 
     implementation deps.kotlin.stdlib.jdk
     implementation deps.androidx.appCompat
@@ -63,6 +63,18 @@ dependencies {
     //Lottie
     implementation deps.lottie
 
+    //Speed Dial
+//    implementation project(':speedDial')
+
+    //Cyanea
+    implementation project(':cyanea')
+
+    //Color Picker
+    implementation project(':color-picker')
+
+    //Quick Permissions
+    implementation project(':quickpermissions-kotlin')
+
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
@@ -76,8 +88,4 @@ dependencies {
     testImplementation deps.junit
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-    implementation project(':quickpermissions-kotlin')
-    implementation project(':cyanea')
-    implementation project(':color-picker')
 }
