--- a/color-picker/build.gradle
+++ b/color-picker/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     implementation deps.androidx.appCompat
-    implementation deps.androidx.preferences
+    implementation deps.androidx.preference
 }
