--- a/cyanea/build.gradle
+++ b/cyanea/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation deps.kotlin.stdlib.jdk
     implementation deps.androidx.appCompat
-    api deps.androidx.preferences
+    api deps.androidx.preference
     implementation deps.material
     implementation project(':color-picker')
     testImplementation deps.junit
