--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/ThemeOne">
+            android:theme="@style/Cyanea">
         <uses-library
                 android:name="org.apache.http.legacy"
                 android:required="false"/>
