--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:2.8.1'
     implementation 'com.afollestad.material-dialogs:input:2.8.1'
     implementation 'com.afollestad.material-dialogs:color:2.8.1'
+    implementation project(':datetime')
 
     //Quick Permissions
     implementation project(':quickpermissions-kotlin')
