--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.SET_ALARM"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
             android:name=".MainApplication"
@@ -27,7 +29,7 @@
                 android:value="AIzaSyCoaxzJXf1A1mypWOa0XkIzb6kXQT0RgT4"/>
 
         <activity
-                android:name="com.jorkoh.transportezaragozakt.MainActivity"
+                android:name=".MainActivity"
                 android:windowSoftInputMode="stateAlwaysHidden|adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -41,6 +43,16 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
+
+        <receiver
+                android:name=".alarms.AlarmReceiver"
+                android:enabled="true"
+                android:exported="false"/>
+
+        <service
+                android:name=".alarms.AlarmService"
+                android:enabled="true"
+                android:exported="false" />
     </application>
 
 </manifest>
