--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,11 @@ dependencies {
     implementation deps.material
     implementation deps.androidx.constraintLayout
     implementation deps.androidx.recyclerView
+    implementation deps.androidx.viewPager
 
-    implementation 'androidx.core:core-ktx:1.1.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
 
     //Room
