--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,16 @@ buildscript {
 
     ext.versions = [
             kotlin          : '1.3.31',
-            androidx        : '1.0.0',
-            appCompat       : '1.1.0-alpha04',
-            recyclerView    : '1.1.0-alpha04',
+            appCompat       : '1.1.0-alpha05',
+            recyclerView    : '1.1.0-alpha05',
+            viewPager       : '1.0.0-alpha01',
             annotation      : '1.0.0-alpha1',
-            preference      : '1.1.0-alpha04',
+            preference      : '1.1.0-alpha05',
             cardView        : '1.0.0',
-            material        : '1.1.0-alpha05',
+            material        : '1.1.0-alpha06',
             maps            : '16.1.0',
             location        : '16.0.0',
-            constraintlayout: '1.1.3',
+            constraintlayout: '2.0.0-beta1',
             colorpicker     : '1.0.5',
             junit           : '4.12',
             mockito_kotlin  : '2.0.0',
@@ -25,8 +25,8 @@ buildscript {
             roomRuntime     : '2.1.0-alpha07',
             roomCompiler    : '2.1.0-alpha07',
             roomCoroutines  : '2.1.0-alpha04',
-            navigation      : '2.1.0-alpha02',
-            workmanager     : '1.0.0',
+            navigation      : '2.1.0-alpha03',
+            workmanager     : '1.0.1',
             parse           : '1.19.0',
             lottie          : '3.0.0'
     ]
@@ -38,6 +38,7 @@ buildscript {
                     'cardView'        : "androidx.cardview:cardview:${versions.cardView}",
                     'preference'      : "androidx.preference:preference:${versions.preference}",
                     'recyclerView'    : "androidx.recyclerview:recyclerview:${versions.recyclerView}",
+                    'viewPager'       : "androidx.viewpager:viewpager:${versions.viewPager}",
                     'annotation'      : "androidx.annotation:annotation:${versions.annotation}",
                     'room'            : [
                             'runtime'   : "androidx.room:room-runtime:${versions.roomRuntime}",
