--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,9 @@ dependencies {
     //Quick Permissions
     implementation project(':quickpermissions-kotlin')
 
+    //QR Scanner
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
