--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,11 @@
                 android:value="AIzaSyCoaxzJXf1A1mypWOa0XkIzb6kXQT0RgT4"/>
 
         <activity
+                android:name="com.journeyapps.barcodescanner.CaptureActivity"
+                android:screenOrientation="fullSensor"
+                tools:replace="screenOrientation" />
+
+        <activity
                 android:name=".MainActivity"
                 android:windowSoftInputMode="stateAlwaysHidden|adjustNothing">
             <intent-filter>
