--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
     <application
             android:name=".MainApplication"
             android:allowBackup="false"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/ic_app_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/ic_app_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/SigFig"
+            android:theme="@style/BaseTheme.Launcher"
             tools:ignore="GoogleAppIndexingWarning">
         <uses-library
                 android:name="org.apache.http.legacy"
