--- a/datetime/build.gradle
+++ b/datetime/build.gradle
@@ -30,5 +30,5 @@ dependencies {
 
   implementation 'com.afollestad:viewpagerdots:1.0.0'
 
-  implementation 'com.afollestad.material-dialogs:core:2.8.1'
+  implementation 'com.afollestad.material-dialogs:core:3.0.0-beta2'
 }
