--- a/quickpermissions-kotlin/build.gradle
+++ b/quickpermissions-kotlin/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
     implementation deps.androidx.appCompat
-    implementation 'com.afollestad.material-dialogs:core:2.8.1'
+    implementation 'com.afollestad.material-dialogs:core:3.0.0-beta2'
 }
 repositories {
     mavenCentral()
