--- a/dresscode/build.gradle
+++ b/dresscode/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     implementation deps.kotlin.stdlib.jdk
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 }
 
 repositories {
