--- a/build.gradle
+++ b/build.gradle
@@ -6,70 +6,74 @@ buildscript {
             gradlePlugin: '3.4.1'
     ]
 
-    ext.versions = [
-            kotlin          : '1.3.31',
-            appCompat       : '1.1.0-alpha05',
-            recyclerView    : '1.1.0-alpha05',
-            viewPager       : '1.0.0-alpha01',
-            preference      : '1.1.0-alpha05',
-            annotation      : '1.0.0-alpha1',
-            cardView        : '1.0.0',
-            material        : '1.1.0-alpha06',
-            maps            : '16.1.0',
-            location        : '16.0.0',
-            constraintlayout: '2.0.0-beta1',
-            colorpicker     : '1.0.5',
-            junit           : '4.12',
-            mockito_kotlin  : '2.0.0',
-            mockito_core    : '2.23.4',
-            roomRuntime     : '2.1.0-alpha07',
-            roomCompiler    : '2.1.0-alpha07',
-            roomCoroutines  : '2.1.0-alpha04',
-            navigation      : '2.1.0-alpha03',
-            workmanager     : '1.0.1',
-            parse           : '1.19.0',
-            lottie          : '3.0.0'
-    ]
-
     ext.deps = [
-            'androidx'    : [
-                    'appCompat'       : "androidx.appcompat:appcompat:${versions.appCompat}",
-                    'constraintLayout': "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}",
-                    'cardView'        : "androidx.cardview:cardview:${versions.cardView}",
-                    'preference'      : "androidx.preference:preference:${versions.preference}",
-                    'recyclerView'    : "androidx.recyclerview:recyclerview:${versions.recyclerView}",
-                    'viewPager'       : "androidx.viewpager:viewpager:${versions.viewPager}",
-                    'annotation'      : "androidx.annotation:annotation:${versions.annotation}",
+            'androidx'             : [
+                    'appCompat'       : "androidx.appcompat:appcompat:1.1.0-beta01",
+                    'constraintLayout': "androidx.constraintlayout:constraintlayout:2.0.0-beta1",
+                    'cardView'        : "androidx.cardview:cardview:1.0.0",
+                    'preference'      : "androidx.preference:preference:1.1.0-beta01",
+                    'recyclerView'    : "androidx.recyclerview:recyclerview:1.1.0-alpha06",
+                    'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
+                    'annotation'      : "androidx.annotation:annotation:1.1.0",
+                    'core'            : "androidx.core:core-ktx:1.2.0-alpha02",
+                    'test'            : "androidx.test:runner:1.2.0",
+                    'legacy'          : "androidx.legacy:legacy-support-v4:1.0.0",
                     'room'            : [
-                            'runtime'   : "androidx.room:room-runtime:${versions.roomRuntime}",
-                            'compiler'  : "androidx.room:room-compiler:${versions.roomCompiler}",
-                            'coroutines': "androidx.room:room-coroutines:${versions.roomCoroutines}"
+                            'runtime'   : "androidx.room:room-runtime:2.1.0",
+                            'compiler'  : "androidx.room:room-compiler:2.1.0-alpha07",
+                            'coroutines': "androidx.room:room-coroutines:2.1.0-alpha04"
                     ],
                     'navigation'      : [
-                            'runtime' : "androidx.navigation:navigation-runtime-ktx:${versions.navigation}",
-                            'fragment': "androidx.navigation:navigation-fragment-ktx:${versions.navigation}",
-                            'ui'      : "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
+                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.1.0-alpha05",
+                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05",
+                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
+                    ],
+                    'lifecycle'       : [
+                            'extensions': "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01",
+                            'viewmodel' : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
                     ]
             ],
-            'kotlin'      : [
+            'kotlin'               : [
                     'stdlib': [
-                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.31"
                     ]
             ],
-            'playServices': [
-                    'maps'    : "com.google.android.gms:play-services-maps:${versions.maps}",
-                    'location': "com.google.android.gms:play-services-location:${versions.location}"
+            'material'             : "com.google.android.material:material:1.1.0-alpha06",
+            'playServices'         : [
+                    'maps'    : "com.google.android.gms:play-services-maps:16.1.0",
+                    'location': "com.google.android.gms:play-services-location:17.0.0"
             ],
-            'material'    : "com.google.android.material:material:${versions.material}",
-            'colorpicker' : "com.jaredrummler:colorpicker-compat:${versions.colorpicker}",
-            'junit'       : "junit:junit:${versions.junit}",
-            'mockito'     : [
-                    'core'  : "org.mockito:mockito-core:${versions.mockito_core}",
-                    'kotlin': "com.nhaarman.mockitokotlin2:mockito-kotlin:${versions.mockito_kotlin}"
+            'maps_utils'           : "com.google.maps.android:android-maps-utils:0.5",
+            'zxing'                : "com.journeyapps:zxing-android-embedded:3.6.0",
+            'viewpagerdots'        : "com.afollestad:viewpagerdots:1.0.0",
+            'material_dialogs'     : [
+                    'core' : 'com.afollestad.material-dialogs:core:3.0.0-beta2',
+                    'input': 'com.afollestad.material-dialogs:input:3.0.0-beta2',
+                    'color': 'com.afollestad.material-dialogs:color:3.0.0-beta2'
             ],
-            'workmanager' : "android.arch.work:work-runtime-ktx:${versions.workmanager}",
-            'parse'       : "com.github.parse-community.Parse-SDK-Android:parse:${versions.parse}",
-            'lottie'      : "com.airbnb.android:lottie:${versions.lottie}"
+            'retrofit'             : [
+                    'retrofit'       : 'com.squareup.retrofit2:retrofit:2.6.0',
+                    'converter_moshi': 'com.squareup.retrofit2:converter-moshi:2.6.0'
+            ],
+            'moshi'                : [
+                    'moshi_adapters'      : 'com.squareup.moshi:moshi-adapters:1.8.0',
+                    'moshi_kotlin'        : 'com.squareup.moshi:moshi-kotlin:1.8.0',
+                    'moshi'               : 'com.squareup.moshi:moshi:1.8.0',
+                    'moshi_kotlin_codegen': 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
+            ],
+            'support' : [
+                    'appcompat' : "com.android.support:appcompat-v7:28.0.0",
+                    'design' : "com.android.support:design:28.0.0",
+                    'percent' : "com.android.support:percent:28.0.0"
+            ],
+            'espresso'             : "com.android.support.test.espresso:espresso-core:3.0.2",
+            'junit'                : "junit:junit:4.12",
+            'kotlinx_serialization': "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0",
+            'workmanager'          : "android.arch.work:work-runtime-ktx:1.0.1",
+            'koin'                 : "org.koin:koin-androidx-viewmodel:1.0.2",
+            'parse'                : "com.github.parse-community.Parse-SDK-Android:parse:1.19.0",
+            'lottie'               : "com.airbnb.android:lottie:3.0.0",
+            'nullaway'             : "com.uber.nullaway:nullaway:0.6.6"
     ]
 
     repositories {
@@ -80,9 +84,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.navigation}"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:${versions.kotlin}"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
     }
 }
 
