--- a/dresscode/build.gradle
+++ b/dresscode/build.gradle
@@ -30,9 +30,9 @@ android {
 dependencies {
     implementation deps.kotlin.stdlib.jdk
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
+    testImplementation deps.junit
+    androidTestImplementation deps.androidx.test
+    androidTestImplementation deps.espresso
 }
 
 repositories {
