--- a/material-intro-screen/build.gradle
+++ b/material-intro-screen/build.gradle
@@ -48,8 +48,8 @@ android {
 
     dependencies {
         implementation fileTree(include: ['*.jar'], dir: 'libs')
-        implementation "com.android.support:appcompat-v7:28.0.0"
-        implementation "com.android.support:design:28.0.0"
-        implementation "com.android.support:percent:28.0.0"
+        implementation deps.support.appcompat
+        implementation deps.support.design
+        implementation deps.support.percent
     }
 }
