--- a/quickpermissions-kotlin/build.gradle
+++ b/quickpermissions-kotlin/build.gradle
@@ -29,12 +29,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    implementation deps.kotlin.stdlib.jdk
+
+    androidTestImplementation deps.androidx.appCompat
     testImplementation deps.junit
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${versions.kotlin}"
+    androidTestImplementation deps.espresso
+
     implementation deps.androidx.appCompat
-    implementation 'com.afollestad.material-dialogs:core:3.0.0-beta2'
+
+    implementation deps.material_dialogs.core
 }
 repositories {
     mavenCentral()
