--- a/speedDial/build.gradle
+++ b/speedDial/build.gradle
@@ -1,19 +1,3 @@
-/*
- * Copyright 2018 Roberto Leinardi.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 apply plugin: 'com.android.library'
 
 android {
@@ -36,5 +20,5 @@ dependencies {
     api deps.androidx.appCompat
     api deps.material
     api deps.androidx.cardView
-    annotationProcessor "com.uber.nullaway:nullaway:0.6.6"
+    annotationProcessor deps.nullaway
 }
