Stop number now is also displayed in favorites destination, feedback option added to MORE, improved localization and updated kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     implementation project(':dresscode')
 
     //Gene-Rate
-    implementation project(path: ':gene-rate')
+    implementation project(':gene-rate')
 
     //Material Dialogs
     implementation deps.material_dialogs.core
