--- a/build.gradle
+++ b/build.gradle
@@ -61,10 +61,10 @@ buildscript {
                     'moshi'               : 'com.squareup.moshi:moshi:1.8.0',
                     'moshi_kotlin_codegen': 'com.squareup.moshi:moshi-kotlin-codegen:1.8.0'
             ],
-            'support' : [
-                    'appcompat' : "com.android.support:appcompat-v7:28.0.0",
-                    'design' : "com.android.support:design:28.0.0",
-                    'percent' : "com.android.support:percent:28.0.0"
+            'support'              : [
+                    'appcompat': "com.android.support:appcompat-v7:28.0.0",
+                    'design'   : "com.android.support:design:28.0.0",
+                    'percent'  : "com.android.support:percent:28.0.0"
             ],
             'espresso'             : "com.android.support.test.espresso:espresso-core:3.0.2",
             'junit'                : "junit:junit:4.12",
@@ -73,7 +73,9 @@ buildscript {
             'koin'                 : "org.koin:koin-androidx-viewmodel:1.0.2",
             'parse'                : "com.github.parse-community.Parse-SDK-Android:parse:1.19.0",
             'lottie'               : "com.airbnb.android:lottie:3.0.0",
-            'nullaway'             : "com.uber.nullaway:nullaway:0.6.6"
+            'nullaway'             : "com.uber.nullaway:nullaway:0.6.6",
+            'firebase'             : "com.google.firebase:firebase-core:17.0.0",
+            'crashlytics'          : "com.crashlytics.sdk.android:crashlytics:2.10.1"
     ]
 
     repositories {
@@ -81,12 +83,15 @@ buildscript {
         jcenter()
         maven { url "http://jitpack.io/" }
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.29.0'
     }
 }
 
