--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ buildscript {
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
                     'core'            : "androidx.core:core-ktx:1.2.0-alpha02",
-                    'test'            : "androidx.test:runner:1.3.0-alpha01",
+                    'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
+                    'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
+                    'espresso' : [
+                            'core'        : "androidx.test.espresso:espresso-core:3.3.0-alpha01",
+                            'contrib'        : "androidx.test.espresso:espresso-contrib:3.3.0-alpha01",
+                    ],
                     'legacy'          : "androidx.legacy:legacy-support-v4:1.0.0",
                     'room'            : [
                             'runtime'   : "androidx.room:room-runtime:2.1.0",
@@ -66,11 +71,14 @@ buildscript {
                     'design'   : "com.android.support:design:28.0.0",
                     'percent'  : "com.android.support:percent:28.0.0"
             ],
-            'espresso'             : "com.android.support.test.espresso:espresso-core:3.0.2",
             'junit'                : "junit:junit:4.12",
+            'mockito'              : "org.mockito:mockito-core:2.8.9",
             'kotlinx_serialization': "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0",
             'workmanager'          : "android.arch.work:work-runtime-ktx:1.0.1",
-            'koin'                 : "org.koin:koin-androidx-viewmodel:1.0.2",
+            'koin'                 : [
+                    'core' : "org.koin:koin-androidx-viewmodel:2.0.1",
+                    'test' : "org.koin:koin-test:2.0.1"
+            ],
             'parse'                : "com.github.parse-community.Parse-SDK-Android:parse:1.19.0",
             'lottie'               : "com.airbnb.android:lottie:3.0.0",
             'nullaway'             : "com.uber.nullaway:nullaway:0.6.6",
@@ -90,7 +98,7 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.40"
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.0'
         classpath 'io.fabric.tools:gradle:1.29.0'
     }
 }
