--- a/dresscode/build.gradle
+++ b/dresscode/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     testImplementation deps.junit
     androidTestImplementation deps.androidx.test
-    androidTestImplementation deps.espresso
+    androidTestImplementation deps.androidx.espresso.core
 }
 
 repositories {
