--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,15 @@
             android:roundIcon="@mipmap/ic_app_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/BaseTheme.Launcher"
-            tools:ignore="GoogleAppIndexingWarning">
+            tools:ignore="GoogleAppIndexingWarning"
+            android:networkSecurityConfig="@xml/network_security_config">
         <uses-library
                 android:name="org.apache.http.legacy"
                 android:required="false"/>
+
+        <meta-data
+                android:name="firebase_crashlytics_collection_enabled"
+                android:value="${crashlytics}" />
 
         <meta-data
                 android:name="com.google.android.gms.version"
