--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ buildscript {
                     'core'            : "androidx.core:core-ktx:1.2.0-alpha02",
                     'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
                     'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
-                    'espresso' : [
-                            'core'        : "androidx.test.espresso:espresso-core:3.3.0-alpha01",
-                            'contrib'        : "androidx.test.espresso:espresso-contrib:3.3.0-alpha01",
+                    'espresso'        : [
+                            'core'   : "androidx.test.espresso:espresso-core:3.3.0-alpha01",
+                            'contrib': "androidx.test.espresso:espresso-contrib:3.3.0-alpha01",
                     ],
                     'legacy'          : "androidx.legacy:legacy-support-v4:1.0.0",
                     'room'            : [
@@ -60,6 +60,10 @@ buildscript {
                     'retrofit'       : 'com.squareup.retrofit2:retrofit:2.6.0',
                     'converter_moshi': 'com.squareup.retrofit2:converter-moshi:2.6.0'
             ],
+            'jspoon'               : [
+                    'core'              : 'pl.droidsonroids:jspoon:1.3.2',
+                    'retrofit_converter': 'pl.droidsonroids.retrofit2:converter-jspoon:1.3.2'
+            ],
             'moshi'                : [
                     'moshi_adapters'      : 'com.squareup.moshi:moshi-adapters:1.8.0',
                     'moshi_kotlin'        : 'com.squareup.moshi:moshi-kotlin:1.8.0',
@@ -76,8 +80,8 @@ buildscript {
             'kotlinx_serialization': "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0",
             'workmanager'          : "android.arch.work:work-runtime-ktx:1.0.1",
             'koin'                 : [
-                    'core' : "org.koin:koin-androidx-viewmodel:2.0.1",
-                    'test' : "org.koin:koin-test:2.0.1"
+                    'core': "org.koin:koin-androidx-viewmodel:2.0.1",
+                    'test': "org.koin:koin-test:2.0.1"
             ],
             'parse'                : "com.github.parse-community.Parse-SDK-Android:parse:1.19.0",
             'lottie'               : "com.airbnb.android:lottie:3.0.0",
