--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,8 @@ buildscript {
                     'color': 'com.afollestad.material-dialogs:color:3.0.0-beta2'
             ],
             'retrofit'             : [
-                    'retrofit'       : 'com.squareup.retrofit2:retrofit:2.6.0',
-                    'converter_moshi': 'com.squareup.retrofit2:converter-moshi:2.6.0'
+                    'retrofit'       : 'com.squareup.retrofit2:retrofit:2.6.1',
+                    'converter_moshi': 'com.squareup.retrofit2:converter-moshi:2.6.1'
             ],
             'jspoon'               : [
                     'core'              : 'pl.droidsonroids:jspoon:1.3.2',
@@ -87,7 +87,8 @@ buildscript {
             'lottie'               : "com.airbnb.android:lottie:3.0.0",
             'nullaway'             : "com.uber.nullaway:nullaway:0.6.6",
             'firebase'             : "com.google.firebase:firebase-core:17.0.0",
-            'crashlytics'          : "com.crashlytics.sdk.android:crashlytics:2.10.1"
+            'crashlytics'          : "com.crashlytics.sdk.android:crashlytics:2.10.1",
+            'leakcanary'           : "com.squareup.leakcanary:leakcanary-android:2.0-beta-2"
     ]
 
     repositories {
